adiciona funcionalidade ao index e melhora seu css.

--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,1 +1,14 @@
-<h1>INDEX PORRA</h1>
+{% extends "base.html" %}
+
+{% block content %}
+{% for chapter in chapters %}
+    <div class="post" id="{{ chapter.id }}">
+        <center>
+            <img src="{{ chapter.image_url }}">
+            <p class="text">
+                {{ chapter.phrase }}
+            </p>
+        </center>
+    </div>
+{% endfor %}
+{% endblock %}
