Modifica o posicioname da barra de navegação

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,11 @@
     <title>Uma história por dia</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-responsive.css" />
+    <style type="text/css" media="screen">
+      .navbar{
+        position: static;
+      }
+    </style>
 </head>
 
 <body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
