adiciona pages de 404 e 500 funcionais.

--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,1 +1,8 @@
-404
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 class="huge_text">
+        404
+    </h1>
+    <p>O capítulo que você procurou não existe ou o endereço dele está errado. Mal aí!</p>
+{% endblock %}
