--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,1 +1,8 @@
-500
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 class="huge_text">
+        500
+    </h1>
+    <p>Parece que houve um erro interno nos nossos servidores. Mal aí!</p>
+{% endblock %}
