Adiciona página para listar as datas de histórias antigas

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,6 +28,11 @@
                                 <img src="{{ STATIC_URL }}img/plus.gif"> Aumente um ponto
                             </a>
                         </li>
+                        <li>
+                            <a href="{% url core:date_history %}">
+                                Histórias passadas
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
