Melhora o texto do 404

--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -4,5 +4,5 @@
     <h1 class="huge_text">
         404
     </h1>
-    <p>O capítulo que você procurou não existe ou o endereço dele está errado. Mal aí!</p>
+    <p>A página que você procurou não existe ou o endereço dele está errado. Mal aí!</p>
 {% endblock %}
