--- a/src/core/templates/core/dates.html
+++ b/src/core/templates/core/dates.html
@@ -2,9 +2,11 @@
 
 {% block content %}
     <div class="post">
-        <ul>
+        <h1>Histórias passadas</h1>
+        <br>
+        <ul class="historico post_image">
             {% for day in dates %}
-            <li>{{ day|date:"SHORT_DATE_FORMAT" }}</li>
+            <li><a href="#">{{ day|date:"SHORT_DATE_FORMAT" }}</a></li>
             {% endfor %}
         </ul>
     </div>
