--- a/src/core/templates/core/novo_capitulo.html
+++ b/src/core/templates/core/novo_capitulo.html
@@ -7,15 +7,15 @@
             <fieldset>
                 <legend>Quem conta um conto, aumenta um ponto...</legend>
                 <div class="control-group">
-                    <label class="control-label">Endereço da imagem</label>
+                    <label class="control-label">Endereço da imagem:</label>
                     <div class="controls">
-                        {{ form.image_url }}
+                        {{ form.image_url }}{{ form.image_url.errors }}
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">Frase</label>
+                    <label class="control-label">Frase:</label>
                     <div class="controls">
-                        {{ form.phrase }}
+                        {{ form.phrase }}{{ form.phrase.errors }}
                     </div>
                 </div>
                 <div class="botao_form">
