adiciona favicon como padrão.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Uma história por dia</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css" />
+    <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" type="image/x-icon">
 </head>
 
 <body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
