--- a/src/static/css/bootstrap.css
+++ b/src/static/css/bootstrap.css
@@ -8,6 +8,12 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
  
+.errorlist {
+    list-style:none;
+    color: #f00;
+    font-weight:bold;
+    }
+ 
 #title a{
     color: #ccc;
     font-size: 80%;
@@ -67,6 +73,12 @@
 .huge_text {
     font-size: 20em;
     color: #ccc;
+    }
+    
+.historico {
+    list-style:none;
+    font-size: 1.1em;
+    text-align:center;
     }
     
 article,
