Coloca o link para as páginas antigas

--- a/src/core/templates/core/dates.html
+++ b/src/core/templates/core/dates.html
@@ -5,8 +5,8 @@
         <h1>Histórias passadas</h1>
         <br>
         <ul class="historico post_image">
-            {% for day in dates %}
-            <li><a href="#">{{ day|date:"SHORT_DATE_FORMAT" }}</a></li>
+            {% for iter_date in dates %}
+            <li><a href="{% url core:day_chapters iter_date.year iter_date.month iter_date.day %}">{{ iter_date|date:"SHORT_DATE_FORMAT" }}</a></li>
             {% endfor %}
         </ul>
     </div>
