Centraliza o título do formulário

--- a/src/core/templates/core/novo_capitulo.html
+++ b/src/core/templates/core/novo_capitulo.html
@@ -5,7 +5,9 @@
         <form class="form-horizontal" action="." method="post">
             {% csrf_token %}
             <fieldset>
-                <legend>Quem conta um conto, aumenta um ponto...</legend>
+                <center>
+                    <legend>Quem conta um conto, aumenta um ponto...</legend>
+                </center>
                 <div class="control-group">
                     <label class="control-label">Endereço da imagem:</label>
                     <div class="controls">
