Modifica as imagens para referenciarem a imagem pequena

--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -6,7 +6,7 @@
         <h2> Capítulo #{{ forloop.counter }}</h2>
         <br>
         <center>
-            <img src="{{ chapter.image_url }}" class="post_image">
+            <img data-original="{{ chapter.image_url }}" src="{{ STATIC_URL }}img/grey.gif" class="post_image lazyload">
             <p class="post_text">
                 "{{ chapter.phrase }}"
             </p>
