--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,14 @@
     <title>Uma história por dia</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css" />
     <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" type="image/x-icon">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.lazyload.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("img.lazyload").lazyload();
+        })
+    </script>
 </head>
 
 <body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
