--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -6,7 +6,9 @@
         <h2> Capítulo #{{ forloop.counter }}</h2>
         <br>
         <center>
+            {% if chapter.image_url %}
             <img data-original="{{ chapter.image_url }}" src="{{ STATIC_URL }}img/grey.gif" class="post_image lazyload">
+            {% endif %}
             <p class="post_text">
                 "{{ chapter.phrase }}"
             </p>
