--- a/src/static/css/bootstrap.css
+++ b/src/static/css/bootstrap.css
@@ -15,7 +15,7 @@
     }
 
 #title a{
-    color: #ccc;
+    color: #eee;
     font-size: 80%;
     }
 
@@ -28,7 +28,7 @@
     }
 
 #conto {
-    background: #444;
+    background: #39c;
     border-radius: 0.6em;
     -webkit-border-radius: 0.6em;
     -moz-border-radius: 0.6em;
@@ -2045,16 +2045,16 @@ table .span12 {
   background-color: #24748c \9;
 }
 .btn-inverse {
-  background-color: #393939;
-  background-image: -moz-linear-gradient(top, #454545, #262626);
-  background-image: -ms-linear-gradient(top, #454545, #262626);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#454545), to(#262626));
-  background-image: -webkit-linear-gradient(top, #454545, #262626);
-  background-image: -o-linear-gradient(top, #454545, #262626);
-  background-image: linear-gradient(top, #454545, #262626);
+  background-color: #17a;
+  background-image: -moz-linear-gradient(top, #17a, #28b);
+  background-image: -ms-linear-gradient(top, #17a, #28b);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#17a), to(#28b));
+  background-image: -webkit-linear-gradient(top, #17a, #28b);
+  background-image: -o-linear-gradient(top, #17a, #28b);
+  background-image: linear-gradient(top, #17a, #28b);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#454545', endColorstr='#262626', GradientType=0);
-  border-color: #262626 #262626 #000000;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#17a', endColorstr='#28b', GradientType=0);
+  border-color: #069 #17a #39c;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
@@ -2063,10 +2063,10 @@ table .span12 {
 .btn-inverse.active,
 .btn-inverse.disabled,
 .btn-inverse[disabled] {
-  background-color: #262626;
+  background-color: #28b;
 }
 .btn-inverse:active, .btn-inverse.active {
-  background-color: #0c0c0c \9;
+  background-color: #28b \9;
 }
 button.btn, input[type="submit"].btn {
   *padding-top: 2px;
@@ -2533,14 +2533,14 @@ button.btn.small, input[type="submit"].btn.small {
   padding-left: 20px;
   padding-right: 20px;
   background-color: #2c2c2c;
-  background-image: -moz-linear-gradient(top, #333333, #222222);
-  background-image: -ms-linear-gradient(top, #333333, #222222);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-  background-image: -webkit-linear-gradient(top, #333333, #222222);
-  background-image: -o-linear-gradient(top, #333333, #222222);
-  background-image: linear-gradient(top, #333333, #222222);
+  background-image: -moz-linear-gradient(top, #28b, #17a);
+  background-image: -ms-linear-gradient(top, #28b, #17a);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#28b), to(#17a));
+  background-image: -webkit-linear-gradient(top, #28b, #17a);
+  background-image: -o-linear-gradient(top, #28b, #17a);
+  background-image: linear-gradient(top, #28b, #17a);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28b', endColorstr='#17a', GradientType=0);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -2736,7 +2736,7 @@ button.btn.small, input[type="submit"].btn.small {
   float: none;
   padding: 10px 10px 11px;
   line-height: 19px;
-  color: #999999;
+  color: #eee;
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
