--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Uma história por dia</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/app.css" />
     <link rel="icon" href="{{ STATIC_URL }}img/favicon.ico" type="image/x-icon">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.lazyload.js" type="text/javascript"></script>
