Corrige erro da tag submit do form de novo capítulo e muda seu texto

--- a/src/core/templates/core/novo_capitulo.html
+++ b/src/core/templates/core/novo_capitulo.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="botao_form">
-                    <input class="btn btn-inverse" type="submit"></button>
+                    <input class="btn btn-inverse" type="submit" value="Aumentar"/>
                 </div>
             </fieldset>
         </form>
